# deepinfer

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REFACTOR_SUMMARY.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start-etcd.sh
config/: default.yaml
configs/: default.toml  default.yaml  engine_compatibility.toml  nvidia_4090.yaml  nvidia_5090.yaml
configs_new/: default.toml
crates/api-server/: Cargo.toml
crates/api-server/src/: config.rs  main.rs
crates/deepinfer-agent/: Cargo.toml
crates/deepinfer-agent/src/: agent.rs  engine_launcher.rs  health_check.rs  heartbeat.rs  lib.rs  reconciler.rs
crates/deepinfer-cli/: Cargo.toml
crates/deepinfer-cli/src/: main.rs
crates/deepinfer-common/: Cargo.toml
crates/deepinfer-common/src/: config.rs  context.rs  error.rs  types.rs
crates/deepinfer-device/: Cargo.toml
crates/deepinfer-device/src/backends/: fallback.rs  nvidia.rs
crates/deepinfer-gateway/: Cargo.toml
crates/deepinfer-gateway/src/: lib.rs  metrics.rs  structured_output.rs
crates/deepinfer-gateway/src/api/: chat.rs  deployment.rs  health.rs  metrics_handler.rs  mod.rs  models.rs
crates/deepinfer-gateway/src/middleware/: context.rs
crates/deepinfer-meta/: Cargo.toml
crates/deepinfer-meta/src/: etcd.rs  lib.rs  store.rs
crates/deepinfer-router/: Cargo.toml
crates/deepinfer-router/src/: router.rs
crates/deepinfer-scheduler/: Cargo.toml
crates/deepinfer-scheduler/src/: scheduler.rs  state.rs  state_sync.rs  strategy.rs
crates/worker-proto/: Cargo.toml  build.rs
crates/worker-proto/src/: lib.rs
crates/xinf-agent/: Cargo.toml
crates/xinf-agent/src/: agent.rs  engine_launcher.rs  heartbeat.rs  reconciler.rs
crates/xinf-cli/: Cargo.toml
crates/xinf-cli/src/: main.rs
crates/xinf-common/: Cargo.toml
crates/xinf-common/src/: capabilities.rs  lib.rs  types.rs
crates/xinf-device/: Cargo.toml
crates/xinf-device/src/: discovery.rs  lib.rs  monitor.rs  types.rs
crates/xinf-device/src/backends/: mod.rs
crates/xinf-gateway/: Cargo.toml
crates/xinf-gateway/src/api/: chat.rs  mod.rs
crates/xinf-gateway/src/middleware/: context.rs
crates/xinf-meta/: Cargo.toml
crates/xinf-meta/src/: embedded.rs  lib.rs  store.rs  watch.rs
crates/xinf-router/: Cargo.toml
crates/xinf-router/src/: conn_pool.rs  endpoint.rs  lib.rs  router.rs
crates/xinf-scheduler/: Cargo.toml
crates/xinf-scheduler/src/: lib.rs  scheduler.rs  state.rs  state_sync.rs  strategy.rs
data/meta/: db  snap.00000000000053DF
deepinfer/: __init__.py  cli.py  config.py  engine.py  gpu_utils.py  server.py
docs/: DEPLOYMENT_SUMMARY.md  api.md  architecture.md  configuration.md  gpu_optimization.md  installation.md  testing.md
docs/copilot_chat/: README.md  chat_20260207.md
examples/: README.md  api_server.py  basic_inference.py  custom_config.py  deployment_5090.md  nvidia_5090_inference.py
proto/engine/v1/: engine.proto
protos/: engine_service.proto
python/deepinfer_chat/: __init__.py  template.py
python/deepinfer_engine/: __init__.py  device.py  engine_service_pb2.py  server.py  vllm_shim.py
python/deepinfer_registry/: __init__.py
python/worker/: gen_proto.sh  requirements.txt  server.py  vllm_worker.py
python/worker/engine/: __init__.py
python/worker/engine/v1/: __init__.py  engine_pb2.py  engine_pb2_grpc.py
python/xinf_chat/: __init__.py
python/xinf_engine/: __init__.py  server.py  vllm_shim.py
python/xinf_registry/: __init__.py  llm.py
scripts/: dev.run.api.sh  dev.run.worker.sh  fetch.tokenizer.json.sh
tests/: __init__.py  test_config.py  test_gpu_utils.py
