[workspace]
members = [
    "crates/deepinfer-common",
    "crates/deepinfer-device",
    "crates/deepinfer-meta",
    "crates/deepinfer-scheduler",
    "crates/deepinfer-router",
    "crates/deepinfer-agent",
    "crates/deepinfer-gateway",
    "crates/deepinfer-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["deepinfer contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# gRPC
tonic = "0.11"
prost = "0.12"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Data structures
dashmap = "5.5"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"

# FFI
libloading = "0.8"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Local workspace crates
deepinfer-common = { path = "crates/deepinfer-common" }
deepinfer-device = { path = "crates/deepinfer-device" }
deepinfer-meta = { path = "crates/deepinfer-meta" }
deepinfer-scheduler = { path = "crates/deepinfer-scheduler" }
deepinfer-router = { path = "crates/deepinfer-router" }
deepinfer-agent = { path = "crates/deepinfer-agent" }
deepinfer-gateway = { path = "crates/deepinfer-gateway" }
