[package]
name = "deepinfer-device"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deepinfer-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libloading = { workspace = true }
once_cell = { workspace = true }
hostname = "0.3"
chrono = { workspace = true }
tokio = { workspace = true }
