[package]
name = "deepinfer-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deepinfer-common = { workspace = true }
deepinfer-router = { workspace = true }
deepinfer-meta = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
