[package]
name = "deepinfer-meta"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deepinfer-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
etcd-client = "0.13"
dashmap = { workspace = true }
