[package]
name = "deepinfer-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deepinfer-common = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
