[package]
name = "xinf-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xinf-common = { workspace = true }
xinf-router = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
