[package]
name = "xinf-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xinf-common = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
