[package]
name = "xinf-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xinf-common = { workspace = true }
xinf-meta = { workspace = true }
xinf-device = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
